--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ margin-bottom: 10px;
 }
 header {
 display: flex;
-color: white;
-background-color: blue;
+color: black;
+background-color: white;
 justify-content: space-around;
 }
 form {
